# celery_beat_example

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
celery_app/: __init__.py  celery_app.py  celery_beat.py  tasks.py
